Fix padding-bottom for footer on smaller screens.

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -28,6 +28,7 @@
     }
 
     @include media($medium-screen) {
+      padding-bottom: 8px;
       position: relative;
       top: 30px;
 
@@ -36,7 +37,7 @@
 
         li {
           display: inline;
-          padding-left: 3rem;
+          padding-left: 2rem;
         }
       }
     }
